testdata/baselines/reference/submodule/conformance/parserSymbolIndexer5.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
parserSymbolIndexer5.ts(2,6): error TS2304: Cannot find name 's'.
parserSymbolIndexer5.ts(2,7): error TS1005: ']' expected.
parserSymbolIndexer5.ts(2,9): error TS2304: Cannot find name 'symbol'.
parserSymbolIndexer5.ts(2,15): error TS1005: ',' expected.
parserSymbolIndexer5.ts(2,16): error TS1136: Property assignment expected.
parserSymbolIndexer5.ts(3,1): error TS1005: ':' expected.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== parserSymbolIndexer5.ts (6 errors) ====
    var x = {
        [s: symbol]: ""
         ~
!!! error TS2304: Cannot find name 's'.
          ~
!!! error TS1005: ']' expected.
            ~~~~~~
!!! error TS2304: Cannot find name 'symbol'.
                  ~
!!! error TS1005: ',' expected.
                   ~
!!! error TS1136: Property assignment expected.
    }
    ~
!!! error TS1005: ':' expected.